--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.parent-div{
+  background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20201009/pngtree-science-or-technology-background-with-dynamic-particles-trendy-colorful-design-template-image_406781.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background-color:rgb(60, 66, 67); */
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100vw;
+  height: 100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+
+.button-box{
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#btn-1{
+ font-size: 1.5em;
+ background-color: rgba(71, 85, 114, 0.946);
+ height: 10vh;
+ width: 10vw;
+ border-radius: 20vw;
+ box-shadow: 0px 0px 30px 10px rgb(44 88 151);
+ border: 2px dotted rgb(11, 11, 11);
+ font-weight: bold;
+ 
+}
+
+
+.ball{
+  height: 18vh;
+  width: 9vw;
+  background-color: black;
+  border: 2px dotted rgb(155, 144, 144);
+  box-shadow: 0px 0px 30px 10px rgb(44 88 151);
+  position:absolute;
+  top: 10%;
+  left: 10%;
+  border-radius: 50%;
+}
+
+.ball-rotate{
+  height: 18vh;
+  width: 9vw;
+  background-color: black;
+  border: 2px dotted rgb(155, 144, 144);
+  box-shadow: 0px 0px 30px 10px rgb(44 88 151);
+  position:absolute;
+  top: 10%;
+  left: 10%;
+  border-radius: 50%;
+  animation-name: down;
+  animation-duration: 3s;
+  animation-timing-function:linear;
+  animation-iteration-count: infinite;
+
+}
+
+@keyframes down {
+
+  from{ transform: rotate(0deg);}
+  to{ transform: rotate(360deg);}
+}
+
+
+@media screen and (max-width:500px){
+
+  #btn-1 {width: 36vw;height: 6vh;}
+
+  .ball{
+    height: 10vh;
+    width: 18vw;
+  background-color: black;
+  border: 2px dotted rgb(155, 144, 144);
+  box-shadow: 0px 0px 30px 10px rgb(44 88 151);
+  position:absolute;
+  top: 10%;
+  left: 10%;
+  border-radius: 50%;
+  } 
+
+
+.ball-rotate {
+  height: 10vh;
+    width: 18vw;
+  background-color: black;
+  border: 2px dotted rgb(155, 144, 144);
+  box-shadow: 0px 0px 30px 10px rgb(44 88 151);
+  position:absolute;
+  top: 10%;
+  left: 10%;
+  border-radius: 50%;
+    animation-name: down;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes down {
+
+  from{ transform: rotate(0deg);}
+  to{ transform: rotate(360deg);}
+}
+
 }
